updated the directory
Place the index.html in the root folder so that when you go to the URL you are automatically directed to the index.html page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,10 @@ hr {
     background-color:var(--colorThree);
     height:100%;
 }
+.section7 {
+    background-color:var(--colorTwo);
+    height:auto;
+}
 .header {
     text-align:center;
     width:100%;
