updated the site
Fixed some errors with overlapping elements, still have to fix the first image overlapping the second section. I worked on some of the citations, I still need to do the majority of them including the information. I also need ot finish the "Part Two" page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,7 +30,7 @@ hr {
 }
 .section2 {
     background-color:var(--colorTwo);
-    height:200%;
+    height:auto;
 
 }
 .section3 {
@@ -48,7 +48,7 @@ hr {
 }
 .section6 {
     background-color:var(--colorThree);
-    height:100%;
+    height:auto;
 }
 .section7 {
     background-color:var(--colorTwo);
@@ -109,4 +109,13 @@ hr {
 }
 #details {
     margin-top:15%;
+}
+.img-max {
+    max-height:500px;
+}
+
+footer {
+    color:var(--mainColor);
+    background-color:var(--colorThree);
+    
 }
